# nerdifier

./: bundler.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  docs.yml  test.yml
plugins/buffr_glitch/src/: lib.rs
plugins/crisp/src/: lib.rs
plugins/crossover/src/: lib.rs
plugins/diopser/src/: lib.rs
plugins/loudness_war_winner/src/: lib.rs
plugins/puberty_simulator/: Cargo.toml
plugins/puberty_simulator/src/: lib.rs  main.rs
plugins/safety_limiter/src/: lib.rs
plugins/soft_vacuum/src/: lib.rs
plugins/spectral_compressor/src/: lib.rs
