[package]
name = "puberty_simulator"
version = "0.1.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/robbert-vdh/nih-plug/tree/master/plugins/puberty_simulator"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "puberty_simulator"
path = "src/main.rs"

[dependencies]
nih_plug = { path = "../../", features = ["assert_process_allocs", "standalone"] }

realfft = "3.0"
